# SmartModelClip

./: CMakeLists.txt  qSlicerSmartModelClipModule.cxx  qSlicerSmartModelClipModule.h  qSlicerSmartModelClipModuleWidget.cxx  qSlicerSmartModelClipModuleWidget.h  vtkQuadPlaneSource.cxx  vtkQuadPlaneSource.h  vtkQuadPlaneWidget.cxx  vtkQuadPlaneWidget.h  vtkQuadPlaneWidgetPlus.cpp  vtkQuadPlaneWidgetPlus.h  vtkSpinningPlaneWidget.cxx  vtkSpinningPlaneWidget.h
Logic/: vtkSlicerSmartModelClipLogic.cxx  vtkSlicerSmartModelClipLogic.h
Resources/: qSlicerSmartModelClipModule.qrc
Resources/UI/: qSlicerSmartModelClipFooBarWidget.ui  qSlicerSmartModelClipModuleWidget.ui
Widgets/: qSlicerSmartModelClipFooBarWidget.cxx  qSlicerSmartModelClipFooBarWidget.h
